feat:手を振ることによってBackSpaceを実現

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Input2022.sln"
+    "dotnet.defaultSolution": "3Dresearch.sln"
 }
